fix scrollbar shifting page

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     font: 18px/1.5 -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
     margin: 20px auto;
     max-width: 800px;
+    /* fix weird shifting from scrollbar */
+    padding-left: calc(100vw - 100%);
 }
 
 h1,
